# deep_news_oai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  cloudflare-tunnel-config.example.yml  docker-compose.yml  pyproject.toml
.serena/: project.yml
.serena/memories/: openai-apps-sdk-patterns.md
data/: google_trends_cache.csv
docs/: architecture.excalidraw  golden_prompts.md
docs/examples/: article_detail.json  count_articles.json  economic_analysis.json  index.json  perspectives_politics.json  report_semiconductor.json  search_company.json  search_person.json  timeline_ai.json  trending_deep_search.json  trending_keywords.json
docs/showcase/: 01_trending_dashboard.html  02_person_comparison.html  03_timeline_vertical.html  04_publisher_heatmap.html  05_economic_dashboard.html  06_bubble_chart.html  07_magazine_layout.html  08_slide_report.html  09_realtime_monitor.html  10_infographic.html  index.html
oai_docs/apps_sdk/: checklists.md  guide.md  index.md
oai_docs/raw/: 00_apps-sdk_home.md  01_plan_use-case.md  02_build_mcp-server.md  03_deploy.md  04_app-submission-guidelines.md  05_concepts_ux-principles.md  06_concepts_ui-guidelines.md  07_guides_optimize-metadata.md
src/deep_news_oai/: __init__.py  __main__.py  server.py
src/deep_news_oai/core/: __init__.py  client.py  images.py  models.py  trends.py
src/deep_news_oai/responses/: __init__.py  builder.py
tests/: __init__.py  conftest.py  test_integration.py  test_responses.py  test_server.py  test_trends.py  test_widgets.py
(+9 files in other folders)
